# stock_agent

./: .gitignore
.github/workflows/: ci.yml
stock-agent/: README.md
stock-agent/apps/api/: pyproject.toml
stock-agent/apps/api/app/: README.md  main.py
stock-agent/apps/api/app/agent/: schemas.py
stock-agent/apps/api/app/api/routes/: analyze.py  backtest.py  indicators.py  ohlcv.py
stock-agent/apps/api/app/core/: settings.py
stock-agent/apps/api/app/services/: backtest_engine.py  signal_engine.py
stock-agent/apps/api/app/tests/integration/: test_backtest_endpoint.py
stock-agent/apps/api/app/tests/unit/: test_backtest_engine.py
stock-agent/apps/api/app/tools/: indicators.py  market_data.py
stock-agent/apps/web/: next.config.js  package.json
stock-agent/apps/web/.next/types/app/: layout.ts  page.ts
stock-agent/apps/web/src/app/: page.tsx
stock-agent/apps/web/src/components/: IndicatorsChart.tsx  ProChart.tsx
stock-agent/apps/web/src/lib/: api.ts  indicators.ts  ohlcv.ts  schemas.ts
